# sonuma-vm

./: .gitignore  CMakeLists.txt  makefile.defs
libsonuma/: Makefile  RMCdefines.h  sonuma.h  sonuma_daemon.c  sonuma_daemon.cpp  sonuma_trampoline.c
sample_code/: Makefile  bench_async.c  bench_async.cpp  bench_sync.c  bench_sync.cpp  many_to_one.c  many_to_one.cpp  multi_qp_read.c  rpc_service.c  rpc_service.cpp  rpc_service_multiqp.c  rpc_sync.c  rpc_sync.cpp
scripts/: reboot_vms.sh
softrmc_daemon/: Makefile  rmcd.c  rmcd.cpp  rmcd.h  son_msg.cc  son_msg.cpp  son_msg.h
softrmc_driver/: Makefile  rmc.mod.c
xen_guests/sorpc_guests/: sorpc_g1_boot.cfg  sorpc_g1_install.cfg  sorpc_g2_boot.cfg  sorpc_g2_install.cfg  sorpc_g3_boot.cfg  sorpc_g3_install.cfg  sorpc_g4_boot.cfg  sorpc_g4_install.cfg  sorpc_g5_boot.cfg
